--- a/package.json
+++ b/package.json
@@ -21,5 +21,12 @@
   "bugs": {
     "url": "https://github.com/JoeRobles/current-contents/issues"
   },
-  "homepage": "https://github.com/JoeRobles/current-contents#readme"
+  "homepage": "https://github.com/JoeRobles/current-contents#readme",
+  "dependencies": {
+    "@types/express": "^4.17.1",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.6.11",
+    "nodemon": "^1.19.1"
+  }
 }
