--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "Authors and publications database",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
+    "dev": "ts-node ./src/server.ts",
+    "start": "nodemon ./dist/server.js",
+    "prod": "npm run build && npm run start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
