--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/JoeRobles/current-contents#readme",
   "dependencies": {
     "@types/express": "^4.17.1",
+    "aws-sdk": "^2.517.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.6.11",
