--- a/package.json
+++ b/package.json
@@ -28,10 +28,16 @@
   "homepage": "https://github.com/JoeRobles/current-contents#readme",
   "dependencies": {
     "@types/express": "^4.17.1",
+    "@types/uniqid": "^4.1.3",
     "aws-sdk": "^2.517.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "lodash": "^4.17.15",
     "mongoose": "^5.6.11",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "uniqid": "^5.0.3"
+  },
+  "devDependencies": {
+    "@types/node": "^12.7.2"
   }
 }
