--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
+    "clear": "rm -rf dist/ coverage/ .nyc_output/",
+    "coverage": "nyc npm run test && nyc report --reporter=html",
+    "coveralls": "nyc npm run test && nyc report --reporter=text-lcov | coveralls -v",
     "dev": "ts-node ./src/server.ts",
     "start": "nodemon ./dist/server.js",
     "prod": "npm run build && npm run start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register src/**/*.spec.ts"
   },
   "repository": {
     "type": "git",
@@ -38,6 +41,18 @@
     "uniqid": "^5.0.3"
   },
   "devDependencies": {
-    "@types/node": "^12.7.2"
+    "@types/jasmine": "^3.4.0",
+    "@types/lodash": "^4.14.137",
+    "@types/node": "^12.7.2",
+    "aws-sdk-mock": "^4.5.0",
+    "chai": "^4.2.0",
+    "coveralls": "^3.0.6",
+    "jasmine": "^3.4.0",
+    "jasmine-console-reporter": "^3.1.0",
+    "mocha": "^6.2.0",
+    "nyc": "^14.1.1",
+    "sinon": "^7.4.1",
+    "ts-node": "^8.3.0",
+    "typescript": "^3.5.3"
   }
 }
