--- a/package.json
+++ b/package.json
@@ -44,14 +44,15 @@
     "@types/jasmine": "^3.4.0",
     "@types/lodash": "^4.14.137",
     "@types/node": "^12.7.2",
+    "@types/supertest": "^2.0.8",
     "aws-sdk-mock": "^4.5.0",
     "chai": "^4.2.0",
     "coveralls": "^3.0.6",
-    "jasmine": "^3.4.0",
     "jasmine-console-reporter": "^3.1.0",
     "mocha": "^6.2.0",
     "nyc": "^14.1.1",
     "sinon": "^7.4.1",
+    "supertest": "^4.0.2",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3"
   }
