--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "target": "es5",
     "module": "commonjs",
     "moduleResolution": "node",
     "sourceMap": true,
@@ -16,5 +15,13 @@
   "exclude": [
     "node_modules",
     "*.js"
+  ],
+  "lib": [
+    "es2017",
+    "dom"
+  ],
+  "target": "es5",
+  "typeRoots": [
+    "node_modules/@types"
   ]
 }
